# qttaskmanager

./: .gitignore  README.md  build.ps1  build_icon.py  installer.iss  main.py  pyproject.toml  pysidedeploy.spec
.github/workflows/: lint.yml  release.yml
procman/: appdata_data.py  appdata_tab.py  collector.py  data.py  detail_dialog.py  disk_data.py  disk_tab.py  icon.py  links_data.py  links_tab.py  port_model.py  port_tab.py  proc_model.py  proc_tab.py  registry_data.py  registry_explorer.py  registry_tab.py  registry_util.py  scan_data.py  scan_model.py  scan_tab.py  scan_worker.py  settings.py  settings_dialog.py  theme.py  threat_data.py  threat_tab.py  version.py  widgets.py  window.py  winsig.py
procman/styles/: app.qss
