[project]
name = "qttaskmanager"
version = "0.1.2"
description = "Qt task manager — live processes, connections and read-only system scanners"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.7",
    "psutil>=5.9",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.2",
]
